--- a/stilo.css
+++ b/stilo.css
@@ -46,3 +46,104 @@ a:active {
 	margin-top: 50px;
 	display: flex;
 }
+
+/* ########################## Responsivo para celulares e tablets ##############################*/
+/* -- 320px — 480px: dispositivos móveis CELULAR --*/
+@media (min-width: 320px) and (max-width: 480px) {
+	/* estilo cabeçalho */
+		.logo__principal {
+	width: 80%;
+	}
+	.texto__cabecalho {
+		text-align: center;
+		margin-top: 100px;
+		margin-bottom: 180px;
+		font-size: 30px;
+		font-weight: 400;
+	}
+	.container {
+		flex-flow: column  nowrap;
+	}
+	
+	/* estilo seção 1*/
+	.secao1__descricao {
+		padding: 1em;
+		width: 90%;
+	}
+	.secao1__titulo {
+		text-align: center;
+	}
+	.secao1__texto {
+		font-size: 20px;
+	}
+	
+	/* estilo seção 2*/
+	.secao2__img__titulo {
+		color: var(--preto-titulo);
+		font-weight: 700;
+		font-size: 38px;
+		text-align: center;
+	}
+	.secao2__subtitulo  h2 {
+		font-size: 20px;
+		text-align: center;
+	}
+	.secao2__imagens {
+		flex-wrap: wrap;
+	}
+	.secao2__imagens  img {
+		width: 100%;
+	} 
+	
+	/* estilo seção 3*/
+	.secao3__texto {
+		margin: 50%  0  50%  0;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-around;
+	}
+	.secao3__texto  h1 {
+		margin-bottom: 50%;
+		text-align: center;
+	} 
+	
+	/* estilo seção 4*/
+	.secao4 {
+		display: flex;
+		justify-content: space-around;
+	}
+	.secao4__container {
+		flex-wrap: nowrap;
+		color: var(--preto-titulo);
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		align-items: center;
+		font-size: 20px;
+	}
+	.secao4__titulo {
+		font-size: 50px;
+	}
+	.secao4__imagem  img {
+		width: 100%;
+	}
+	.secao4__texto,
+	.secao4__email,
+	.secao4__fone,
+	.secao4__endereco {
+		font-size: 20px;
+	}
+	.secao4__endereco {
+		text-align: center;
+	}
+	
+	/* estilo rodapé*/
+	.rodape__lista {
+		flex-wrap: wrap;
+		align-items: center;
+		flex-direction: column-reverse;
+	}
+	.rodape__lista  li {
+		margin-bottom: 10px;
+	}
+}
